public_website/static/css/style.css
/* ... */
.tab-content .tab-content-subheading {
    font-size: 1rem;
}

/* ======== NAVBAR ======== */

.navbar {
    background-color: #FFFFFF;
}

@media (max-width: 576px) {
    .navbar {
        padding: 0.4rem;
    }
}

.navbar-search-box {
    position: fixed;
    width: 70%;
    height: calc(60px + 1rem);
    background-color: #fff;
    display: flex;
    flex-direction: column-reverse;
    z-index: 1029;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 0.5rem;
    border-radius: 5px;
    top: 0;
}

.navbar-search-box.open {
    top: calc(60px + 2rem);
}

@media (max-width: 576px) {
    .navbar-search-box {
        height: calc(35px + 1rem);
        width: 100%;
        border-radius: 0;
    }

    .navbar-search-box.open {
        top: calc(35px + 2.5rem);
    }
}

.navbar .header-container {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.navbar .navbar-menu-toggle {
    font-size: 1.3rem;
    padding: 0 1rem;
    padding-right: 1.2rem;
    cursor: pointer;
}

@media (max-width: 576px) {
    .navbar .navbar-menu-toggle {
        font-size: 1rem;
        padding: 0 0.3rem;
    }
}

.navbar .navbar-brand {
    padding: 0;
}

.navbar .navbar-brand img {
    width: 210px;
}

.navbar .header-container .right-section {
    display: flex;
    align-items: center;
}

.navbar .navbar-search-icon,
.navbar .user-signin {
    font-size: 1.3rem;
    cursor: pointer;
}

@media (max-width: 576px) {
    .navbar .navbar-search-icon,
    .navbar .user-signin {
        font-size: 1rem;
    }
}

.navbar .navbar-search-icon.active {
    color: #87B24D;
}

.navbar .navbar-user-wrapper {
    border: 0.3rem solid #e4e4e4;
    border-radius: 50%;
    position: relative;
}

.navbar .navbar-user-wrapper #navbarUserButton {
    padding: 0;
    background-color: #d9d9d9;
    border: none;
}

.navbar .navbar-user-wrapper #navbarUserButton:focus {
    box-shadow: none;
}

@media (max-width: 576px) {
    .navbar .navbar-user-wrapper #navbarUserButton img {
        width: 30px;
        height: 30px;
    }
}

.navbar .navbar-user-wrapper .dropdown-menu {
    left: unset;
    right: 0;
    top: 120%;
}

.navbar .navbar-user-wrapper .dropdown-menu .user-name {
    text-align: center;
    font-weight: bold;
    margin-bottom: 0.7rem;
    font-size: 1.1rem;
    color: #9B63A8;
}

@media (max-width: 576px) {
    .navbar .navbar-user-wrapper .dropdown-menu .user-name {
        font-size: 1rem;
        margin-bottom: 0.5rem;
    }
}

.navbar .navbar-user-wrapper .dropdown-menu .dropdown-item a {
    color: #5d5d5d;
}

@media (max-width: 576px) {
    .navbar .navbar-user-wrapper .dropdown-menu .dropdown-item a {
        font-size: 0.9rem;
    }
}

.navbar .user-signin {
    border-radius: 50%;
    padding: 0.8rem 1rem;
    background-color:#fff;
    color:#000;
}

.navbar .user-signin:hover {
    background-color: #eee;
}

@media (max-width: 576px) {
    .navbar .navbar-brand {
        margin-right: 0;
    }

    .navbar .navbar-brand img {
        width: 120px;
    }
}

.navbar .navbar-element {
    font-size: 1.5rem;
}

@media (max-width: 576px) {
    .navbar .navbar-element {
        font-size: 0.9rem;
        margin: 0 0.5rem;
    }
}

.navbar #languageSelector {
    font-size: 1.2rem;
    padding: 0 1rem;
    padding-left: 1.8rem;
}

.navbar #languageSelector i {
    font-size: 1.1rem;
}

@media (max-width: 576px) {
    .navbar #languageSelector {
        font-size: 0.9rem;
        padding: 0;
    }

    .navbar #languageSelector i {
        font-size: 0.8rem;
    }
}

.navbar #languageSelector:focus {
    box-shadow: none;
}

.navbar-menu {
    position: fixed;
    top: 0;
    width: 40%;
    height: 100%;
    background-color: #FFFFFF;
    z-index: 1032;
    margin: 0;
    left: -40%;
}

@media (max-width: 992px) {
    .navbar-menu {
        width: 100%;
        left: -100%;
    }
}

.navbar-menu a {
    color: #000000;
}

.navbar-menu .navbar-menu-close {
    float: right;
    font-size: 1.5rem;
    margin-top: 1rem;
    margin-right: 1rem;
}

@media (max-width: 576px) {
    .navbar-menu .navbar-menu-close {
        font-size: 1.2rem;
        margin-top: 1.2rem;
        margin-right: 1.4rem;
        padding: 0;
    }
}

.navbar-menu-container {
    padding: 10rem 4rem;
    font-size: 1.3rem;
}

.navbar-menu-container .row {
    margin-bottom: 2.5rem;
}

@media (max-width: 576px) {
    .navbar-menu-container {
        padding: 3rem 4rem;
        font-size: 1.2rem;
    }

    .navbar-menu-container .row {
        margin-bottom: 0;
    }

    .navbar-menu-container .row .col-sm {
        margin-bottom: 1.5rem;
    }
}

.navbar-menu-container .row.auth-buttons-area {
    margin-bottom: 0;
    border-top: 1px solid #e4e4e4;
    padding-top: 3rem;
}

.navbar-menu-container .row img {
    margin-right: 1rem;
    height: 32px;
    width: 32px;
}

.navbar-menu-open {
    left: 0;
}

.page-title-bar {
    background-color:#87B24D;
    display: flex;
    flex-direction: column-reverse;
    padding: 0 2rem;
    margin-bottom: 2rem;
}

@media (max-width: 576px) {
    .page-title-bar {
        padding-left: 0;
    }
}

.page-title-bar .page-title {
    color: #ffffff;
    font-size: 0.9rem;
    margin: 1rem 0;
}

@media (max-width: 576px) {
    .page-title-bar .page-title {
        font-size: 0.8rem;
        margin: 0.8rem;
    }
}

.page-title-bar .page-title a {
    color: #ffffff;
    text-decoration: underline;
}

.navbar-user-wrapper .notification-dot {
    position: absolute;
    background-color: #9B63A8;
    color: #fff;
    border-radius: 50%;
    padding: 0.3rem 0.6rem;
    font-size: 0.7rem;
    top: -0.7rem;
    right: -0.8rem;
}

@media (max-width: 576px) {
    .navbar-user-wrapper .notification-dot {
        padding: 0.2rem 0.5rem;
        font-size: 0.5rem;
        top: -0.5rem;
        right: -0.5rem;
    }
}

.navbar .page-title-bar .user-menu-button:hover {
    background-color: #96c15c;
}

.navbar .page-title-bar .user-menu-button img {
    margin-left: 0.5rem;
}
/* ... */

